--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body{font: 20px/1.4 'Roboto', sans-serif; background-color: var(--clr-dark); color: #fff;display: grid; place-content: center; min-height: 100vh; text-align: center;}
 img{max-width: 100%; display: block;}
 .pt-3 { padding-top: 1rem;}
-.profile{width: 23rem; height: 23rem; border-radius: 1rem; border: 2px solid var(--clr-brown)}
+.profile{max-width: 23rem; height: 23rem; border-radius: 1rem; border: 2px solid var(--clr-brown); margin-inline: auto;}
 
     @media screen and (max-height: 520px) {
     body{padding-block: 2rem;}
